@@ -2,6 +2,7 @@
   -Fixed CIP type for LINT, changed to signed
   -Cleaned up some formatting issues
   -Fixed crash on a read/write after a multi-packet reply
+  -Modified InitialRead() to raise exception if tag doesn't exist
 
 02/06/17
   -Use a different attribute in GetPLCTime()
